--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Experiment 01</title>
+    <title>Bounce clock</title>
     
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
     
